# clean-llm

./: .gitignore  README.md  README_en.md  guide.md  main.py  pipeline.sh  pyproject.toml
clean_llm/: utils.py
clean_llm/eval/: eval_pretrain.py
clean_llm/models/: basics.py  cs336_lm.py  qwen2_5.py
clean_llm/tokenizer/: tokenizer.py  train.py  train_fast.py  utils.py
clean_llm/train/: adapters.py  pretrain.py  sft.py
data/: download_owt.sh  download_ts.sh
data/txt/: download.sh  download_owt.sh  download_ts.sh
data_sft/: preprocess.py
scipts_sft/: adpters.py
scripts/: eval_pretrain.py  pretrain.py  test_eval_pretrain.py  test_pretrain.py  test_qwen2_5.py  test_train_tokenizer.py  tokenize.py  train_sft.py  train_sft_v0.py  train_tokenizer.py
scripts/configs/: config.yaml  evaluate_config.yaml  evaluate_cs336_lm.yaml  evaluate_qwen2_5.yaml  pretrain_cs336_lm.yaml  pretrain_qwen2_5.yaml  sft_gsm8k.yaml  tokenizer.yaml  train_tokenizer.yaml
tests/: test_pretrain.py  test_qwen2_5.py
tests/configs/: config.yaml
tokenizers/TinyStoriesV2-GPT4-train/: merges.pkl  vocab.pkl
tokenizers/TinyStoriesV2-GPT4-valid/: merges.pkl  vocab.pkl
