[project]
name = "clean-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.8.1",
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "einx>=0.3.0",
    "hydra-core>=1.3.2",
    "jaxtyping>=0.3.2",
    "mlflow>=3.1.1",
    "pip>=25.1.1",
    "transformers>=4.53.1",
    "vllm>=0.9.2",
]
